assets/css/styles.css
/* ... */
.contact .grid li {
	padding: 50px;
	-ms-flex-preferred-size: 33.3%;
	    flex-basis: 33.3%;
	text-align: center;
}

.contact .grid li i {
	color: #8c9eff;
}

.contact .grid li h4 {
	font-size: 20px;
	margin: 25px 0;
}

.contact .grid li p {

	line-height: 1.2;
}

@media (max-width: 1000px) {
	.contact form input {
		-ms-flex-preferred-size: 100%;
		    flex-basis: 100%;
		margin: 0 0 20px 0;
	}

	.contact .grid li {
		-ms-flex-preferred-size: 50%;
		    flex-basis: 50%;
	}
}

@media (max-width: 800px) {
	.contact .grid li {
		-ms-flex-preferred-size: 100%;
		    flex-basis: 100%;
	}
}
/*Footer Section*/

footer {
	font-size: 12px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	text-align: center;
	-ms-flex-pack: distribute;
	    justify-content: space-around;
	background-color: #484a55;
	color: #fff;
	padding: 20px 0;
}

footer a {
	opacity: .85;
}

footer ul {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
}

footer ul li {
	margin-left: 16px;
}

footer p {
	font-size: 14px;
	opacity: 0.6;
	-ms-flex-item-align: center;
	    -ms-grid-row-align: center;
	    align-self: center;
}


@media (max-width: 1100px) {
	footer {
		-webkit-box-orient: vertical;
		-webkit-box-direction: normal;
		    -ms-flex-direction: column;
		        flex-direction: column;
	}

	footer p {
		text-align: center;
		margin-bottom: 20px;
	}

	footer ul li {
		margin: 0 8px;
	}
} 

@media (max-width: 800px){
	footer p{
		font-size: 14px;
	}
}

@media (max-width: 375px){
	footer p{
		font-size: 13px;
	}
}

/* About Section */

.about {
	background-image: url("../img/divers17.jpg");
	background-size: cover;
	background-color: #80a3db;
}

.about img {
	height: 350px;
	width: auto;
	margin: 0 auto 40px;
}

.about h4 {
	font-size: 1.8em;
}

.about .section-content .column ul {
	list-style: disc;
	margin-left: 40px;
}

@media (max-width: 1200px) {
	.about .column-2 {
		order: 0;
	}
}

/* Services Nav */

#services-nav {
	width: 100%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	    -ms-flex-direction: row;
	        flex-direction: row;
	-ms-flex-pack: distribute;
	    justify-content: space-around;
	-ms-flex-wrap: wrap;
	    flex-wrap: wrap;
}

#services-nav a {
	flex-basis: 50%;
	display: flex;
	align-items: center;
	align-self: flex-start;
}

#services-nav p {
	text-align: center;
	font-weight: bold;
	width: 250px;
	line-height: 20px;
}

#services-nav img {
	width: 200px;
	height: 150px;
	-o-object-fit: cover;
	   object-fit: cover;
}

#services-nav li {
	display: inline-block;
	text-align: center;
	margin: 0 auto;
	opacity: .80;

}

#services-nav li:hover {
	opacity: 1;
}

#services-nav a:nth-child(1) {
	-webkit-animation: enterScreen .5s forwards;
	        animation: enterScreen .5s forwards;
	opacity: 0;
}

#services-nav a:nth-child(2) {
	-webkit-animation: enterScreen .5s .1s forwards;
	        animation: enterScreen .5s .1s forwards;
	opacity: 0;
}

#services-nav a:nth-child(3) {
	-webkit-animation: enterScreen .5s .2s forwards;
	        animation: enterScreen .5s .2s forwards;
	opacity: 0;
}

#services-nav a:nth-child(4) {
	-webkit-animation: enterScreen .5s .3s forwards;
	        animation: enterScreen .5s .3s forwards;
	opacity: 0;
}

@-webkit-keyframes enterScreen {
	0%{
		-webkit-transform: scale(1.1);
		        transform: scale(1.1);
	}
	100%{
		opacity: .85;
		-webkit-transform: scale(1);
		        transform: scale(1);
	}
}

@keyframes enterScreen {
	0%{
		-webkit-transform: scale(1.1);
		        transform: scale(1.1);
	}
	100%{
		opacity: .85;
		-webkit-transform: scale(1);
		        transform: scale(1);
	}
}


/* Services Page */

.services-page {
	position: relative;
	min-height: 100vh;
	/* background-image: url("../img/homepage/homepage4.jpg"); */
	background-size: cover;
	background-color: #80a3db;
}

.section-content {	
	position: relative;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	padding: 25px;
	width: 75%;
	background-color: rgba(236, 236, 236, 0.815);
	margin-top: 100px;
	border: 1px solid black;
	border-radius: 4px;
}

/* .section-content img {
	width: 50%;
	height: auto;
	margin-bottom: 25px;
} */

.section-content h3 {
	text-align: center;
	margin: 20px 0px;
}

.section-content p {
	text-align: left;
}


.section-content ul {
	width: 75%;
	list-style: disc;
	text-align: left;
	margin-left: 50px;
}

.section-content a {
	color: rgb(0, 0, 0);
	opacity: 1;
}

.section-content a img{
	position: relative;
	display: block;
	opacity: 1;
	margin: 0 auto 20px;
}

.section-content .back-link {
	position: absolute;
	left: 8px;
	top: 8px;
	font-size: 20px;
}

.section-content .back-link a {
	color: black;
	
}

.services-info {
	display: none;
	opacity: 0;
}

.services-info img{
	max-width: 65%;
	height: auto;
}


@media (max-width: 1060px) {
	.section-content{
		width: 90vw;
		margin-top: 210px;
	}
}

@media (max-width: 800px){

	.section-content{
		width: 95vw;
	}
	.section-content img {
		width: 65%;
		height: auto;
	}
}

@media (max-width: 600px){
	.section-content h3 {
		margin-top: 25px;
	}
	.section-content img {
		width: 90%;
		height: auto;
	}
}

@-webkit-keyframes fadeIn{
	100%{
		opacity: 1;
	}
}

@keyframes fadeIn{
	100%{
		opacity: 1;
	}
}

/* Contact Page */

.contact-page{
	position: relative;
	min-height: 100vh;
	background-image: url("../img/divers21.jpg");
	background-size: cover;
	background-color: #80a3db;
}

.contact-page h4 {
	text-decoration: underline;
}


.contact-page a {
	color: black;
}

@media (max-width: 1200px){
	.contact-page .section-gallery .column-2 {
		order: 0;
	}
}
/* ... */

